--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: masamune_signin_twitter
 description: >-
   Plugin for signing in with a Twitter account.
-version: 0.5.0
+version: 0.5.1
 homepage: https://mathru.net
 repository: https://github.com/mathrunet/flutter_masamune_signin_twitter
 
@@ -12,8 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   # Firebase
-  firebase_core: ^0.4.4+3
-  firebase_auth: ^0.16.0
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.1+2
   # Auth
   flutter_twitter: ^1.1.3
   # Masamune
