--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: masamune_signin_twitter
 description: >-
   Plugin for signing in with a Twitter account.
-version: 0.6.1
+version: 0.6.2
 homepage: https://mathru.net
 repository: https://github.com/mathrunet/flutter_masamune_signin_twitter
 
@@ -17,6 +17,7 @@ dependencies:
   # Auth
   flutter_twitter: ^1.1.3
   # Masamune
+  masamune: ^0.6.0
   masamune_flutter: ^0.6.0
   masamune_firebase: ^0.6.0
 
